[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ui/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level/buttons/Restart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/buttons/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/buttons/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=5]
[ext_resource path="res://Level/buttons/Continue.tscn" type="PackedScene" id=6]
[ext_resource path="res://yandex-ads-lib/yandex_ads.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -81.0
margin_top = 20.0
margin_right = 81.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 162.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.705882, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Button" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 162.0
margin_bottom = 154.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 10
alignment = 1

[node name="Continue" parent="VBoxContainer/Button" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 162.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Restart" parent="VBoxContainer/Button" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 30.0
margin_right = 162.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenu" parent="VBoxContainer/Button" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 60.0
margin_right = 162.0
margin_bottom = 80.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Exit" parent="VBoxContainer/Button" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 90.0
margin_right = 162.0
margin_bottom = 110.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="SureYesNo" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -22.0
margin_right = 92.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sure" type="Label" parent="SureYesNo"]
margin_right = 185.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )
custom_colors/font_color = Color( 0.117647, 0.701961, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "CONTINUE FOR COINS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SureYesNo"]
margin_top = 24.0
margin_right = 185.0
margin_bottom = 44.0

[node name="Coins" type="Button" parent="SureYesNo/HBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="Yes" type="Label" parent="SureYesNo/HBoxContainer/Coins"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -10.0
margin_right = 45.0
margin_bottom = 10.0
rect_min_size = Vector2( 90, 20 )
custom_colors/font_color = Color( 0.843137, 0.878431, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "COINS"
align = 1
valign = 1

[node name="Ads" type="Button" parent="SureYesNo/HBoxContainer"]
margin_left = 94.0
margin_right = 185.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="Yes" type="Label" parent="SureYesNo/HBoxContainer/Ads"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -10.0
margin_right = 45.0
margin_bottom = 10.0
rect_min_size = Vector2( 90, 20 )
custom_colors/font_color = Color( 0.117647, 0.647059, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "ADVERTISING"
align = 1
valign = 1

[node name="NoContinue" type="Button" parent="SureYesNo"]
margin_top = 48.0
margin_right = 185.0
margin_bottom = 68.0
focus_mode = 0
size_flags_horizontal = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Label" parent="SureYesNo/NoContinue"]
margin_right = 183.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 20 )
custom_colors/font_color = Color( 0.878431, 0.254902, 0.117647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 2 )
text = "NO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yandex" type="Node" parent="."]
script = ExtResource( 8 )
rewarded_id = "R-M-1663731-3"

[connection signal="pressed" from="VBoxContainer/Button/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SureYesNo/HBoxContainer/Coins" to="." method="_on_Coins_pressed"]
[connection signal="pressed" from="SureYesNo/HBoxContainer/Ads" to="." method="_on_Ads_pressed"]
[connection signal="pressed" from="SureYesNo/NoContinue" to="." method="_on_NoContinue_pressed"]
[connection signal="rewarded" from="Yandex" to="." method="_on_Yandex_rewarded"]
[connection signal="rewarded_video_loaded" from="Yandex" to="." method="_on_Yandex_rewarded_video_loaded"]
